# voice-agent

./: .gitignore  README.md
agent-react/: .gitignore  components.json  eslint.config.mjs  index.html  package-lock.json  package.json  taskfile.yaml  vite.config.ts
agent-react/src/: App.tsx  app-config.ts  main.tsx  vite-env.d.ts
agent-react/src/components/: Header.tsx
agent-react/src/components/app/: chat-transcript.tsx  session-view.tsx  theme-toggle.tsx  tile-layout.tsx  transcription-toggle-button.tsx
agent-react/src/components/livekit/: alert-toast.tsx  select.tsx  toaster.tsx
agent-react/src/components/livekit/agent-control-bar/: agent-control-bar.tsx  track-toggle.tsx
agent-react/src/components/livekit/scroll-area/: scroll-area.tsx
agent-react/src/hooks/: useRoom.ts
agent-react/src/lib/: api.ts  utils.ts
backend/: .env.example  .gitignore  agent.py  pyproject.toml
backend/rag/: documents.py
